qis-compiler/rust/snapshots/selene_hugr_qis_compiler__gpu__test__gpu_codegen@pre-mem2reg@llvm14_get_context.snap
---
source: qis-compiler/rust/gpu.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@gpu_validated = thread_local global i8 0
@no_gpu_error = private unnamed_addr constant [27 x i8] c"No error message available\00", align 1

define private { i1, i64 } @_hl.main.1(i64 %0) {
alloca_block:
  %"0" = alloca { i1, i64 }, align 8
  %"2_0" = alloca i64, align 8
  %"4_0" = alloca { i1, i64 }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i64 %0, i64* %"2_0", align 4
  %"2_01" = load i64, i64* %"2_0", align 4
  call void @run_gpu_validation()
  %gpu_ref_ptr = alloca i64, align 8
  %gpu_ref_call = call i8 @gpu_init(i64 %"2_01", i64* %gpu_ref_ptr)
  call void @validate_gpu_response(i8 %gpu_ref_call)
  %gpu_ref = load i64, i64* %gpu_ref_ptr, align 4
  %1 = insertvalue { i1, i64 } { i1 true, i64 poison }, i64 %gpu_ref, 1
  store { i1, i64 } %1, { i1, i64 }* %"4_0", align 4
  %"4_02" = load { i1, i64 }, { i1, i64 }* %"4_0", align 4
  store { i1, i64 } %"4_02", { i1, i64 }* %"0", align 4
  %"03" = load { i1, i64 }, { i1, i64 }* %"0", align 4
  ret { i1, i64 } %"03"
}

; Function Attrs: noinline
define void @run_gpu_validation() #0 {
entry:
  %validated = load i8, i8* @gpu_validated, align 1
  %already_validated = icmp ne i8 %validated, 0
  br i1 %already_validated, label %done, label %validate

done:                                             ; preds = %entry
  ret void

validate:                                         ; preds = %entry
  %validate_call = call i8 @gpu_validate_api(i64 0, i64 1, i64 0)
  call void @validate_gpu_response(i8 %validate_call)
  store i8 1, i8* @gpu_validated, align 1
  ret void
}

declare i8 @gpu_validate_api(i64, i64, i64)

; Function Attrs: noinline
define void @validate_gpu_response(i8 %0) #0 {
entry:
  %success = icmp ne i8 %0, 0
  br i1 %success, label %ok, label %err

ok:                                               ; preds = %entry
  ret void

err:                                              ; preds = %entry
  call void @gpu_error_handler()
  unreachable
}

; Function Attrs: noinline
define void @gpu_error_handler() #0 {
entry:
  %error_message = call i8* @gpu_get_error()
  %is_null = icmp eq i8* %error_message, null
  %error_message_nonnull = select i1 %is_null, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @no_gpu_error, i32 0, i32 0), i8* %error_message
  call void @panic_str(i32 70002, i8* %error_message_nonnull)
  unreachable
}

declare i8* @gpu_get_error()

; Function Attrs: noreturn
declare void @panic_str(i32, i8*) #1

declare i8 @gpu_init(i64, i64*)

attributes #0 = { noinline }
attributes #1 = { noreturn }
